# confluence-agentic-rag

./: #futureReads.md  .cursorrules  .dockerignore  .funcignore  .gitignore  00-deploy-func-app.sh  01_Design-README.md  02_Integration-Guide.md  03_Step-by-Step-Guide.md  DEPLOYMENT-SUCCESS-SUMMARY.md  Dockerfile.production  INGESTION-PIPELINE-SUMMARY.md  PACKAGE-INSTALLATION.md  PROCESSING-PIPELINE-SUMMARY.md  SEARCH-ARCHITECTURE-FLOW.md  Untitled-2.py  __README.md  claude.md  docker-build.sh   docker-compose.production.yml  docker-compose.yml  embedding-README.md  end-to-end-code-README.md  graph-connector-README.md  infra-README.md  ingestion-README-consolidated.md  ingestion-README-detailed-exe.md  ingestion-README.md  makefile  processing-README.md  production_config.yml  pyproject.toml  requirements.txt  setup.py  todo_future_features.md  todo_main.md  utils.py
ZZZ_embedding/: EMBEDDING-COMPARISON-ANALYSIS.md  __init__.py  chunker.py  config.py  embedder.py  embedding-readme.md  models.py  requirements.txt  retriever.py  vector_store.py
agents/: Dockerfile  agent_README.md  agent_quickstart_guide.md  confluence_qa_orchestrator.py  factory.py  main.bicep  monitoring.py  prompts.py  router.py
func-app/: graph_enricher.py  requirements.txt
graph-enrichment-skill-integration-deployment/: 00_deploy-driver.sh  01_deploy_graph_enriched_search.py  02_migration_and_verification.py  AZURE-SEARCH-IMPLEMENTATION-GUIDE.md  README.md
infra/: 03-deploy-modular.sh  04-create-search-index-indexer.sh  05-main-deploy-graph-enrichment-function.sh  DEPLOYMENT-SUMMARY.md  (+44 more)
(+68 files in other folders)
